[package]
name = "vec2dim"
version = "0.3.2"
authors = ["Colin Logue <email@colinlogue.me>"]
edition = "2018"
license = "MIT"
description = "Two-dimensional array"
readme = "README.md"
repository = "https://github.com/colinlogue/vec2dim/"
documentation = "https://colinlogue.github.io/vec2dim/target/doc/vec2dim/index"

[dependencies]
